@@ -1,3 +1,10 @@
+2003-09-15  Rodrigo Moya <rodrigo@ximian.com>
+
+	* idl/evolution-calendar.idl: added InvalidObject CallStatus.
+
+	* pcs/cal-backend-file.c (cal_backend_file_create_object): implemented.
+	(cal_backend_file_modify_object): implemented.
+
 2003-09-12  Rodrigo Moya <rodrigo@ximian.com>
 
 	* pcs/cal.c (cal_notify_cal_address, cal_notify_alarm_email_address,
